--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -3,6 +3,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+
+    @include respond-to("tel") {
+        gap: 60px;
+    }
 }
 
 .tour__card {
@@ -32,6 +36,18 @@
             z-index: 3;
         }
     }
+
+    @include respond-to("pc-old") {
+        flex: 0 1 calc((100% - 2 * 20px) / 3);
+    }
+
+    @include respond-to("nout") {
+        flex: 0 1 calc((100% - 1 * 20px) / 2);
+    }
+
+    @include respond-to("tel") {
+        flex: 0 1 100%;
+    }
 }
 
 .test {
@@ -49,6 +65,14 @@
     align-items: center;
     justify-content: center;
     border-top: transparent;
+
+    @include respond-to("tel") {
+        bottom: -43px;
+        transition: 0.3s;
+        opacity: 1;
+        z-index: 3;
+        width: 100.5%;
+    }
 }
 
 .tour__btn {
@@ -64,6 +88,10 @@
     // margin-top: 20px;
     transition: 0.3s;
     position: absolute;
+
+    @include respond-to("tel") {
+        width: 90%;
+    }
 }
 
 .tour__card-img-wrap {
